# skiplists

./: CMakeLists.txt  LICENSE  README.md  quad.c  quad.h  skiplist.c  skiplist.h
test/: linear.c  rigorous.c  simple.c
